@@ -1,3 +1,4 @@
+Added density-sensor dial "highlight" band
 # 0.00.42 (64996) Jun 12, 2012
 Added inertia to the dial for the "single-dial" density meter
 Dials swapped for the two-dial density meter
